@@ -10,6 +10,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import java.util.Optional;
 import java.util.Collections;
+import java.util.Map;
 
 
 @Service
@@ -27,32 +28,39 @@ public class UserService {
         if (userRepository.findByEmail(registerRequest.getEmail()).isPresent()) {
             return ResponseEntity.badRequest().body("Email sudah digunakan!");
         }
-
+    
         MyAppUser newUser = new MyAppUser();
         newUser.setUsername(registerRequest.getUsername());
         newUser.setEmail(registerRequest.getEmail());
         newUser.setPassword(passwordEncoder.encode(registerRequest.getPassword())); // Hash password
         newUser.setPhoneNumber(registerRequest.getPhoneNumber());
-
+        newUser.setRole(registerRequest.getRole() != null ? registerRequest.getRole() : "USER"); // Default role USER
+    
         userRepository.save(newUser);
         return ResponseEntity.ok("Registrasi berhasil!");
     }
-
+    
     public ResponseEntity<?> login(LoginRequest loginRequest) {
         Optional<MyAppUser> userOptional = userRepository.findByUsername(loginRequest.getUsername());
         if (userOptional.isEmpty()) {
+            System.out.println("Username tidak ditemukan: " + loginRequest.getUsername());
             return ResponseEntity.badRequest().body("Username tidak ditemukan!");
         }
     
         MyAppUser user = userOptional.get();
         if (!passwordEncoder.matches(loginRequest.getPassword(), user.getPassword())) {
+            System.out.println("Password salah untuk username: " + loginRequest.getUsername());
             return ResponseEntity.badRequest().body("Password salah!");
         }
     
         // Dummy token (di real case, gunakan JWT)
-        String token = "dummy-token-" + user.getUsername();  
+        String token = "dummy-token-" + user.getUsername();
     
-        return ResponseEntity.ok(Collections.singletonMap("token", token));
+        // Kembalikan token dan role
+        return ResponseEntity.ok(Map.of(
+            "token", token,
+            "role", user.getRole() // Kirim role ke frontend
+        ));
     }
     
 }
